--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,7 +1,9 @@
+# Adaptations from [https://www.debian.org/releases/stable/example-preseed.txt] © 2017 Chris Greencorn
+
 #### Contents of the preconfiguration file (for stretch)
 ### Localization
 # Preseeding only locale sets language, country and locale.
-d-i debian-installer/locale string en_US
+#d-i debian-installer/locale string en_US
 
 # The values can also be preseeded individually for greater flexibility.
 d-i debian-installer/language string en
