General refinements to scripts

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -430,5 +430,12 @@ d-i finish-install/reboot_in_progress note
 # packages and run commands in the target system.
 d-i preseed/late_command string \
 	wget https://raw.githubusercontent.com/chrisgreencorn/debian-preseed/master/customization_script.sh && \
-		. customization_script.sh
+		. customization_script.sh && \
+	# Install zsh and make default shell 
+	in-target apt-install zsh && in-target chsh -s /bin/zsh && \ # figure out dotfile for config
+	
+
+
+
+# End
 	
