--- a/preseed.cfg
+++ b/preseed.cfg
@@ -429,12 +429,10 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 d-i preseed/late_command string \
-	wget https://raw.githubusercontent.com/chrisgreencorn/debian-preseed/master/customization_script.sh && \
-		. customization_script.sh && \
-	# Install zsh and make default shell 
-	in-target apt-install zsh && in-target chsh -s /bin/zsh && \ # figure out dotfile for config
-	
-
+	in-target cd /tmp/ && \
+		in-target wget https://raw.githubusercontent.com/chrisgreencorn/debian-preseed/master/customization_script.sh && \
+			in-target chmod -x /tmp/customization_script.sh && \
+				in-target /bin/bash customization_script.sh
 
 
 # End
